- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.5.1, 5.6.0
 - 
    None
 - 
    Ubuntu Linux, Ubuntu Phone
 
- 
        475c74a9926efcd968572563e678988e53804603
 
Minimal example: http://pastebin.com/g3rKm0As (you will also need IncubateMe.qml http://pastebin.com/kq4XRkzV)
Steps to reproduce: 
- click inside the main window with random interval (for example 10 fast clicks, little delay, another 5 clicks and so on)
 - you will see that "incubatedCount" is not 0 when object incubation ends
 
Example of last lines of activity in output:
        ...
        qml: onIncubatedCountChanged 37
        qml: Object IncubateMe_QMLTYPE_18(0x28db9d40) 181 is now ready!
That means that 37 of 181 items were not created.
- relates to
 - 
                    
QTBUG-42706 incubateObject does not handle onStateChanged slot, If run more then one incubateObject in series.
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-53111 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 216081,4 | Hold internal reference to incubator object while incubating | 5.12 | qt/qtdeclarative | Status: MERGED | -2 | 0 |